position rocket section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img
           width="48"
           height="48"
-          src="https://img.icons8.com/material-rounded/96/rocket.png"
+          src="images/icons8-rocket-64.png"
           alt="rocket"
         />
         <a href="/" id="brand">Rocketman</a>
@@ -71,6 +71,41 @@
               <a href="/">Contact Us</a>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="rockets-section">
+      <div class="rocket-details">
+        <div class="rocket">
+          <img
+            src="https://images.unsplash.com/photo-1517976547714-720226b864c1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="spacex rockets"
+            style="width: 70%"
+          />
+        </div>
+        <div class="rocket-desc right">
+          <p id="h1">Self Landing Rocket</p>
+          <p id="h2">
+            Probably the coolest thing evar!!1 We can program this for you.
+          </p>
+          <button>More Details</button>
+        </div>
+      </div>
+      <div class="rocket-details">
+        <div class="rocket" style="justify-content: end">
+          <img
+            src="https://images.unsplash.com/photo-1516849841032-87cbac4d88f7?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="spacex rockets"
+            style="width: 70%"
+          />
+        </div>
+        <div class="rocket-desc left">
+          <p id="h1">Rockets are gas guzzlers</p>
+          <p id="h2">
+            If you think gas is expensive now.. think about rocket prices!
+            Luckily, we water our gas down to give you more bang for your buck.
+          </p>
+          <button>More Details</button>
         </div>
       </div>
     </div>
