--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <img
             src="https://images.unsplash.com/photo-1517976547714-720226b864c1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="spacex rockets"
-            style="width: 70%"
+            style="width: 70%; height: 90%"
           />
         </div>
         <div class="rocket-desc right">
@@ -96,7 +96,7 @@
           <img
             src="https://images.unsplash.com/photo-1516849841032-87cbac4d88f7?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="spacex rockets"
-            style="width: 70%"
+            style="width: 70%; height: 90%"
           />
         </div>
         <div class="rocket-desc left">
