--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>RocketMan</title>
   </head>
@@ -15,7 +19,7 @@
           src="images/icons8-rocket-64.png"
           alt="rocket"
         />
-        <a href="/" id="brand">Rocketman</a>
+        <a href="#" id="brand">Rocketman</a>
       </div>
       <div class="navbar-links">
         <a href="#">SERVICES</a>
@@ -109,5 +113,54 @@
         </div>
       </div>
     </div>
+    <div class="info" style="text-align: center; margin: 100px 20px">
+      <div class="contact-info">
+        <p id="moto-1">
+          We've also partnered with Skynet to maintain humanoid robotics.
+        </p>
+        <button class="bg-purple">Contact Us</button>
+      </div>
+      <div class="quote-info" style="padding: 40px">
+        <p id="h2">
+          Our rockets were so clean they blinded over 1,000 people when they
+          watched our launch. Thanks Rocketman!
+        </p>
+        <p>-TOTALLY NOT SPACEX 😉</p>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-content">
+        <div class="links">
+          <p class="link-title">Links</p>
+          <a href="">Services</a>
+          <a href="">Contact</a>
+          <a href="">Wagtail Course</a>
+        </div>
+        <div class="contact">
+          <p class="link-title">Contact Us</p>
+          <div>
+            Contact us anytime at
+            <a href="mailto:gary@totallyfakeemail.com"
+              >gary@totallyfakeemail.com</a
+            >
+          </div>
+        </div>
+        <div class="hours">
+          <p class="link-title">Hours</p>
+          <p>Monday - Friday<br>9am - 5pm</p>
+        </div>
+        
+        <div class="socials">
+          <p>
+            <a href="https://twitter.com/wagtailcms"> <i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.youtube.com/playlist?list=PLMQHMcNi6ocsS8Bfnuy_IDgJ4bHRRrvub"> <i class="fa-brands fa-youtube"></i></a>
+            <div>&copy;
+              2023 Rocketman
+            </div>
+          </p>
+        </div>
+      </div>
+     
+    </footer>
   </body>
 </html>
